style/style.scss
// Imports
@import 'reset';

// Fonts
@import url('https://fonts.googleapis.com/css?family=Archivo+Narrow');

// Colors
@import 'colors';

// Values
@import 'values';

// Components
@import 'components';

// Style

body {
    font-family: 'Archivo Narrow', sans-serif;
    font-size: 2rem;
    color: $gold;

    background: $black;
    overflow-x: hidden;

    height: 100vh;
    width: 100vw;

    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

header {
    height: $headerHeight;
    background-position: 50%;
    text-align: center;
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: fixed;
    top: 0;
    width: 100vw;
    // margin-bottom: 50px;
    background: $black;
    border-bottom: solid 10px $gold;
    padding: 0 20px;
    box-sizing: border-box;

    button {
        // position: absolute;
        // left: 20px;
        // top: 40px;
        width: 280px;
    }

    #left {
        display: flex;
        align-items: center;
        width: 25%;
        #collectionSize {
            width: 260px;
        }
    }

    #right {
        width: 25%;
        display: flex;
        justify-content: right;
    }
}

// albumVue

#albumVue {
    width: 100vw;
    // height: 95vh;
    // overflow: hidden;
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-top: $headerHeight;

    #randomButton {
        margin: 0 auto;
        margin-top: 50px;
    }

    .content {
        display: flex;
        justify-content: center;
        align-items: center;
        width: 100%;

        .album-metadata {
            text-align: right;
            width: 50%;
            display: flex;
            flex-direction: column;
            align-items: right;

            #player {
                display: block;
                border: solid 3px $gold;
                margin-top: 14px;
            }
        }
    
        img {
            width: 300px;
            height: 300px;
            margin: 50px;
            // box-shadow: 0px 0px 0px 10px $gold;
            border: solid 5px $gold;
        }
    
        .album-criteria {
            width: 50%;
        }
    }

    footer {
        $numberOfAlbumsInRandomVue: 11;
        display: flex;
        position: fixed;
        bottom: 0;
        border-top: solid 10px $gold;
        img {
            height: 100vw / $numberOfAlbumsInRandomVue;
            width: 100vw / $numberOfAlbumsInRandomVue;
    
            &:hover {
                cursor: pointer;
            }
        }
    }
}

// atticVue

#atticVue {
    display: flex;
    flex-wrap: wrap;
    padding: $headerHeight + 30px 20px 50px 20px;

    // Dirty hack
    #player {
        display: none;
    }

    .artist {
        margin-right: 50px;
        margin-bottom: 30px;

        &:last-of-type {
            margin-right: 0;
        }

        .artist-discography {
            height: 100%;
            display: flex;
            flex-wrap: wrap;
            .album-wrapper {
                display: flex;
                flex-direction: column;
                .album-year {
                    font-size: 1.2rem;
                }
                img {
                    height: 100px;
                    width: 100px;
                    border-bottom: solid 3px $gold;
                    &:hover {
                        cursor: pointer;
                        border-bottom: solid 3px $cream;
                    }
                }
            }
        }
    }

}

// aboutVue

#aboutVue {
    margin: 0 auto;
    padding: $headerHeight + 30px 20px 50px 20px;
    width: 60vw;
    text-align: justify;
}

